# 2021Spring-Computer-Graphics

./: .editorconfig  .gitignore  README.md
PA0/: README.md
PA0/code/: run_all.sh
PA0/code/include/: element.hpp
PA0/code/testcases/: doraemon.txt
PA1/: README.md
PA1/code/include/: camera.hpp  material.hpp  sphere.hpp  transform.hpp
PA1/code/src/: main.cpp
PA2/code/include/: group.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA2/code/src/: main.cpp
PA3/code/include/: curve.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA3/code/src/: main.cpp
PA4/: PA4_CGAN.py
path-trace/code/: CMakeLists.txt  Makefile  run_all.sh
path-trace/code/include/: camera.hpp  curve.hpp  group.hpp  hit.hpp  material.hpp  math.hpp  object3d.hpp  plane.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  trace.hpp  triangle.hpp
path-trace/code/mesh/.comments/: floor1.jpg.xml
path-trace/code/src/: main.cpp  material.cpp  scene_parser.cpp
path-trace/code/testcases/: 1.txt  2.txt  3.txt  4.txt  5.txt  scene00.txt  scene01_basic.txt  scene02_cube.txt  scene03_sphere.txt  scene04_axes.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt  scene07_shine.txt  uni.txt
